# Thai-Reading-Addon

./: .gitignore  CONTEXT.md  Pyperclip.py  README.md  __init__.py  addon_config.py  anki_services.py  build.py  characterManipulator.py  chineseHandler.py  config.json  conftest.py  cssJSHandler.py  dev.py  dictdb.py  js_registry.py  main.py  manifest.json  miUpdater.py  misettings.py  miutils.py  modelChanger.py  models.py  pyproject.toml  repro_duplication.py  settings.py  test_core_logic.py  text_utils.py  updater.py  utils.py
.github/workflows/: ci.yml
_infra/: __init__.py  anki_services.py  build.py  updater.py  utils.py
config/: config.py  mutation.py  settings.py
db/: populate_dict.py
demo/: index.html
js/: bracketsFromSel.js  common.js  fetchText.js  insertHTMLToField.js  removeBrackets.js  thaiparser.js
reading/: dictdb.py  generator.py  handler.py  text_utils.py
template/: handler.py  injector.py
tests/: conftest.py  test_addon_config.py  test_anki_services.py  test_character_manipulator.py  test_chinese_handler.py  test_config_mutation.py  test_css_js_handler.py  test_dictdb.py  test_editor_integration.py  test_fix_verification.py  test_js_registry.py  test_reading_generator.py  test_smoke.py  test_template_injector.py  test_thai_css_js_handler.py  test_thai_handler.py  test_utils.py
tests/integration/: test_editor_integration.py  test_fix_verification.py  test_startup_smoke.py
