[project]
name = "migaku-chinese"
version = "0.0.0"
description = "Anki addon for Chinese reading generation and card template injection"
requires-python = ">=3.9"
dependencies = []

[tool.ruff]
target-version = "py39"
line-length = 120
exclude = ["lib", "urllib3"]
extend-exclude = ["__pycache__", "*.pyc"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade (target >=3.9)
    "YTT", # flake8-2020
    "RUF", # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ty]

[tool.ty.environment]
python-version = "3.9"
extra-paths = ["lib"]

[tool.ty.rules]
unresolved-import = "warn"
possibly-unresolved-reference = "warn"
unresolved-attribute = "warn"
invalid-assignment = "warn"

[tool.ty.src]
exclude = ["lib/**", "urllib3/**"]

[tool.ty.analysis]
allowed-unresolved-imports = [
    "PyQt6.*",
    "anki.*",
    "aqt.*",
    "dragonmapper.*",
    "zhon.*",
    "gtts.*",
    "urllib3.*",
    "requests.*",
]
